# mcp-Interactivebrokers

./: README.md  data.xml  main.py  mcp_server.py  pyproject.toml  result.xml  test.py
core/: __init__.py  config.py  constant.py  fundamental_operate.py  info_operate.py  market_data_operate.py  order_operate.py  websocket.py
examples/: account_portfolio.py  contract.py  hello_word.py  order.py  websocket_usage.md
routes/: account_info.py  fundamental.py  market_data.py  trading.py  websocket.py
tests/: test_account_info.py
utils/: account_value_map.json  data_convert.py  logger.py
