[project]
name = "mcp-interact-broker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.6.1",
    "ib-async>=1.0.3",
    "ib-fundamental>=0.0.5",
    "pandas>=2.2.3",
    "setuptools>=80.3.1",
    "tzdata>=2025.2",
    "uvicorn>=0.34.2",
]
